--- a/Views/Address/Index.cshtml
+++ b/Views/Address/Index.cshtml
@@ -6,6 +6,10 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
+<a href="/Address/Create" class="btn btn-outline-dark mb-3">
+    Cadastrar endereço
+</a>
+
 @if (Model.Count() == 0)
 {
     <p>Nenhum endereço cadastrado.</p>
@@ -45,4 +49,11 @@ else
             }
         </tbody>
     </table>
+}
+
+@if(TempData["MessageSuccess"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+        @TempData["MessageSuccess"]<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 }
