--- a/Views/Hospital/Index.cshtml
+++ b/Views/Hospital/Index.cshtml
@@ -6,6 +6,10 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
+<a href="/Hospital/Create" class="btn btn-outline-dark mb-3">
+    Cadastrar unidade
+</a>
+
 @if (Model.Count() == 0)
 {
     <p>Nenhum hospital cadastrado.</p>
