add update view and save method

--- a/Views/Hospital/Index.cshtml
+++ b/Views/Hospital/Index.cshtml
@@ -41,7 +41,11 @@ else
                             Detalhes
                         </a>
                     </td>
-                    <td></td>
+                    <td>
+                        <a href="/Hospital/Update/@hospital.Id" class="btn btn-outline-dark">
+                            Atualizar
+                        </a>
+                    </td>
                     <td></td>
                 </tr>
             }
