--- a/Views/Hospital/Index.cshtml
+++ b/Views/Hospital/Index.cshtml
@@ -46,7 +46,11 @@ else
                             Atualizar
                         </a>
                     </td>
-                    <td></td>
+                    <td>
+                        <a href="/Hospital/Delete/@hospital.Id" class="btn btn-outline-dark">
+                            Remover
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
