--- a/Views/Hospital/Show.cshtml
+++ b/Views/Hospital/Show.cshtml
@@ -16,6 +16,10 @@
     Atualizar
 </a>
 
+<a href="/Hospital/Delete/@Model.Id" class="btn btn-outline-dark ms-3 mt-2">
+    Remover
+</a>
+
 @if (TempData["MessageSuccess"] != null)
 {
     <div class="alert alert-success alert-dismissible fade show mt-4" role="alert">
