standardizing the layout

--- a/Views/Patient/Create.cshtml
+++ b/Views/Patient/Create.cshtml
@@ -14,7 +14,7 @@
         <label for="name" class="form-label">Nome do paciente</label>
         <input type="text" class="form-control" name="name" id="name" required>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-2">
         <label for="age" class="form-label">Idade</label>
         <input type="text" class="form-control" name="age" id="age" required>
     </div>
@@ -22,12 +22,12 @@
         <label for="species" class="form-label">Espécie</label>
         <input type="text" class="form-control" name="species" id="species" required>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-3">
         <label for="bloodType" class="form-label">Tipo sanguíneo</label>
         <input type="text" class="form-control" name="bloodType" id="bloodType" required>
     </div>
     <div class="col-md-2">
-        <label for="tutorId" class="form-label">ID tutor</label>
+        <label for="tutorId" class="form-label">ID do tutor</label>
         <input type="text" class="form-control" name="tutorId" id="tutorId" required>
     </div>
     <div class="col-12 mt-4">
