--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -23,8 +23,8 @@ else
                 <th scope="col">Nome</th>
                 <th scope="col">Idade</th>
                 <th scope="col">Espécie</th>
-                <th scope="col">TipoSanguineo</th>
-                <th scope="col">TutorId</th>
+                <th scope="col">Tipo sanguíneo</th>
+                <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
@@ -38,7 +38,6 @@ else
                     <td>@patient.Age</td>
                     <td>@patient.Species</td>
                     <td>@patient.BloodType</td>
-                    <td>@patient.TutorId</td>
                     <td>
                         <a href="/Patient/Show/@patient.Id" class="btn btn-outline-dark">
                             Detalhes
