--- a/Views/Patient/Update.cshtml
+++ b/Views/Patient/Update.cshtml
@@ -12,24 +12,24 @@
         <label for="id" class="form-label">ID</label>
         <input type="text" class="form-control" name="id" id="id" value="@Model.Id" readonly>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-10">
         <label for="name" class="form-label">Nome</label>
         <input type="text" class="form-control" name="name" id="name" value="@Model.Name" required>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-2">
         <label for="age" class="form-label">Idade</label>
         <input type="text" class="form-control" name="age" id="age" value="@Model.Age" required>
     </div>
-    <div class="col-md-2">
-        <label for="species" class="form-label">Especie</label>
+    <div class="col-md-5">
+        <label for="species" class="form-label">Espécie</label>
         <input type="text" class="form-control" name="species" id="species" value="@Model.Species" required>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-3">
         <label for="bloodType" class="form-label">Tipo sanguíneo</label>
         <input type="text" class="form-control" name="bloodType" id="bloodType" value="@Model.BloodType" required>
     </div>
-    <div class="col-md-4">
-        <label for="tutorId" class="form-label">Tutor Id</label>
+    <div class="col-md-2">
+        <label for="tutorId" class="form-label">ID do tutor</label>
         <input type="text" class="form-control" name="tutorId" id="tutorId" value="@Model.TutorId" required>
     </div>
     <div class="col-12 mt-4">
