--- a/Views/Tutor/Update.cshtml
+++ b/Views/Tutor/Update.cshtml
@@ -12,7 +12,7 @@
         <label for="id" class="form-label">ID</label>
         <input type="text" class="form-control" name="id" id="id" value="@Model.Id" readonly>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-10">
         <label for="name" class="form-label">Nome</label>
         <input type="text" class="form-control" name="name" id="name" value="@Model.Name" required>
     </div>
@@ -21,10 +21,10 @@
         <input type="text" class="form-control" name="cpf" id="cpf" value="@Model.Cpf" required>
     </div>
     <div class="col-md-2">
-        <label for="addressId" class="form-label">Endereço Id</label>
+        <label for="addressId" class="form-label">ID do endereço</label>
         <input type="text" class="form-control" name="addressId" id="addressId" value="@Model.AddressId" required>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-5">
         <label for="telephone" class="form-label">Telefone</label>
         <input type="text" class="form-control" name="telephone" id="telephone" value="@Model.Telephone" required>
     </div>
