--- a/Views/Tutor/Index.cshtml
+++ b/Views/Tutor/Index.cshtml
@@ -22,8 +22,8 @@ else
                 <th scope="col">ID</th>
                 <th scope="col">Nome</th>
                 <th scope="col">CPF</th>
-                <th scope="col">EndereçoId</th>
                 <th scope="col">Telefone</th>
+                <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
@@ -35,7 +35,6 @@ else
                     <th scope="row">@tutor.Id</th>
                     <td>@tutor.Name</td>
                     <td>@tutor.Cpf</td>
-                    <td>@tutor.AddressId</td>
                     <td>@tutor.Telephone</td>
                     <td>
                         <a href="/Tutor/Show/@tutor.Id" class="btn btn-outline-dark">
