--- a/Views/Anamnesis/Index.cshtml
+++ b/Views/Anamnesis/Index.cshtml
@@ -1,18 +1,18 @@
-@model IEnumerable<VetManager.Models.Tutor>
+@model IEnumerable<VetManager.Models.Anamnesis>
 
 @{
-    ViewData["Title"] = "Tutores";
+    ViewData["Title"] = "Anamnese";
 }
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
-<a href="/Tutor/Create" class="btn btn-outline-dark mb-3">
-    Cadastrar tutor
+<a href="/Anamnesis/Create" class="btn btn-outline-dark mb-3">
+    Cadastrar Anamnese
 </a>
 
 @if (Model.Count() == 0)
 {
-    <p>Nenhum tutor cadastrado.</p>
+    <p>Nenhuma Anamnese cadastrada.</p>
 }
 else
 {
@@ -20,35 +20,35 @@ else
         <thead>
             <tr>
                 <th scope="col">ID</th>
-                <th scope="col">Nome</th>
-                <th scope="col">CPF</th>
-                <th scope="col">EndereçoId</th>
-                <th scope="col">Telefone</th>
+                <th scope="col">PacienteId</th>
+                <th scope="col">Sintomas</th>
+                <th scope="col">Diagnóstico</th>
+                <th scope="col">Observations</th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            @foreach (var tutor in Model)
+            @foreach (var anamnesis in Model)
             {
                 <tr>
-                    <th scope="row">@tutor.Id</th>
-                    <td>@tutor.Name</td>
-                    <td>@tutor.Cpf</td>
-                    <td>@tutor.AddressId</td>
-                    <td>@tutor.Telephone</td>
+                    <th scope="row">@anamnesis.Id</th>
+                    <td>@anamnesis.PatientId</td>
+                    <td>@anamnesis.Symptoms</td>
+                    <td>@anamnesis.Diagnosis</td>
+                    <td>@anamnesis.Observations</td>
                     <td>
-                        <a href="/Tutor/Show/@tutor.Id" class="btn btn-outline-dark">
+                        <a href="/Anamnesis/Show/@anamnesis.Id" class="btn btn-outline-dark">
                             Detalhes
                         </a>
                     </td>
                     <td>
-                        <a href="/Tutor/Update/@tutor.Id" class="btn btn-outline-dark">
+                        <a href="/Anamnesis/Update/@anamnesis.Id" class="btn btn-outline-dark">
                             Atualizar
                         </a>
                     </td>
                     <td>
-                        <a href="/Tutor/Delete/@tutor.Id" class="btn btn-outline-dark">
+                        <a href="/Anamnesis/Delete/@anamnesis.Id" class="btn btn-outline-dark">
                             Remover
                         </a>
                     </td>
