--- a/Views/Patient/Update.cshtml
+++ b/Views/Patient/Update.cshtml
@@ -12,34 +12,27 @@
         <label for="id" class="form-label">ID</label>
         <input type="text" class="form-control" name="id" id="id" value="@Model.Id" readonly>
     </div>
-    <div class="col-md-10">
+    <div class="col-md-3">
         <label for="name" class="form-label">Nome</label>
         <input type="text" class="form-control" name="name" id="name" value="@Model.Name" required>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-5">
         <label for="age" class="form-label">Idade</label>
         <input type="text" class="form-control" name="age" id="age" value="@Model.Age" required>
     </div>
-    <div class="col-md-5">
-        <label for="species" class="form-label">Espécie</label>
+    <div class="col-md-2">
+        <label for="species" class="form-label">Especie</label>
         <input type="text" class="form-control" name="species" id="species" value="@Model.Species" required>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-4">
         <label for="bloodType" class="form-label">Tipo sanguíneo</label>
         <input type="text" class="form-control" name="bloodType" id="bloodType" value="@Model.BloodType" required>
     </div>
-    <div class="col-md-2">
-        <label for="tutorId" class="form-label">ID do tutor</label>
+    <div class="col-md-4">
+        <label for="tutorId" class="form-label">Tutor Id</label>
         <input type="text" class="form-control" name="tutorId" id="tutorId" value="@Model.TutorId" required>
     </div>
     <div class="col-12 mt-4">
         <button type="submit" class="btn btn-outline-dark">Salvar</button>
     </div>
 </form>
-
-@if(TempData["MessageError"] != null)
-{
-    <div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
-        @TempData["MessageError"]<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-}
