--- a/Views/Tutor/Create.cshtml
+++ b/Views/Tutor/Create.cshtml
@@ -18,11 +18,11 @@
         <label for="cpf" class="form-label">CPF</label>
         <input type="text" class="form-control" name="cpf" id="cpf" required>
     </div>
-    <div class="col-md-2">
-        <label for="addressId" class="form-label">ID do endereço</label>
+    <div class="col-md-5">
+        <label for="addressId" class="form-label">Endereço Id</label>
         <input type="text" class="form-control" name="addressId" id="addressId" required>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-2">
         <label for="telephone" class="form-label">Telefone</label>
         <input type="text" class="form-control" name="telephone" id="telephone" required>
     </div>
