--- a/Views/Anamnesis/Show.cshtml
+++ b/Views/Anamnesis/Show.cshtml
@@ -5,19 +5,22 @@
    var patient = ViewData["Patient"] as Patient;
 }
 
+<a href="/Anamnesis/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
 <p><strong>ID:</strong> @Model.Id</p>
-<p><strong>Paciente:</strong> @patient.Name, idade: @patient.Age - @patient.Species, tipo sanguínio @patient.BloodType - ID do tutor: @patient.TutorId.</p>
+<p><strong>Paciente:</strong> @patient.Name | Idade: @patient.GetAge() | Espécie: @patient.Species | Tipo Sanguínio: @patient.BloodType | ID do tutor: @patient.TutorId</p>
+<p><strong>ID do paciente:</strong> @Model.PatientId</p>
 <p><strong>Sintomas:</strong> @Model.Symptoms</p>
 <p><strong>Diagnóstico:</strong> @Model.Diagnosis</p>
 <p><strong>Observações:</strong> @Model.Observations</p>
 
-<a href="/Anamnesis/Update/@Model.Id" class="btn btn-outline-dark mt-2">
+<a href="/Anamnesis/Update/@Model.Id" class="btn btn-outline-primary mt-2">
     Atualizar
 </a>
 
-<a href="/Anamnesis/Delete/@Model.Id" class="btn btn-outline-dark ms-3 mt-2">
+<a href="/Anamnesis/Delete/@Model.Id" class="btn btn-danger ms-3 mt-2">
     Remover
 </a>
 
