--- a/Views/Anamnesis/Update.cshtml
+++ b/Views/Anamnesis/Update.cshtml
@@ -22,11 +22,11 @@
     </div>
     <div class="col-md-5">
         <label for="diagnosis" class="form-label">Diagnóstico</label>
-        <input type="text" class="form-control" name="diagnosis" id="diagnosis" required>
+        <input type="text" class="form-control" name="diagnosis" id="diagnosis">
     </div>
     <div class="col-md-5">
         <label for="observations" class="form-label">Observações</label>
-        <input type="text" class="form-control" name="observations" id="observations" required>
+        <input type="text" class="form-control" name="observations" id="observations">
     </div>
     <div class="col-12 mt-4">
         <button type="submit" class="btn btn-outline-dark">Salvar</button>
