--- a/Views/Patient/Show.cshtml
+++ b/Views/Patient/Show.cshtml
@@ -5,21 +5,25 @@
    var tutor = ViewData["Tutor"] as Tutor;
 }
 
+<a href="/Patient/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
 <p><strong>ID:</strong> @Model.Id</p>
 <p><strong>Nome do paciente:</strong> @Model.Name</p>
-<p><strong>Idade:</strong> @Model.Age</p>
+<p><strong>Data de Nascimento:</strong> @Model.BirthDateBrString</p>
+<p><strong>Idade:</strong> @Model.GetAge()</p>
 <p><strong>Espécie:</strong> @Model.Species</p>
 <p><strong>Tipo sanguíneo:</strong> @Model.BloodType</p>
-<p><strong>Tutor:</strong> @tutor.Name, @tutor.Cpf - @tutor.AddressId, @tutor.Telephone</p>
+<p><strong>Tutor:</strong> @tutor.Name | CPF: @tutor.Cpf | Telefone: @tutor.Telephone | ID do endereço: @tutor.AddressId</p>
+<p><strong>ID do tutor:</strong> @Model.TutorId</p>
 
 
-<a href="/Patient/Update/@Model.Id" class="btn btn-outline-dark mt-2">
+<a href="/Patient/Update/@Model.Id" class="btn btn-outline-primary mt-2">
     Atualizar
 </a>
 
-<a href="/Patient/Delete/@Model.Id" class="btn btn-outline-dark ms-3 mt-2">
+<a href="/Patient/Delete/@Model.Id" class="btn btn-danger ms-3 mt-2">
     Remover
 </a>
 
