--- a/Views/Patient/Update.cshtml
+++ b/Views/Patient/Update.cshtml
@@ -17,11 +17,11 @@
         <input type="text" class="form-control" name="name" id="name" value="@Model.Name" required>
     </div>
     <div class="col-md-5">
-        <label for="age" class="form-label">Idade</label>
-        <input type="text" class="form-control" name="age" id="age" value="@Model.Age" required>
+        <label for="birthDate" class="form-label">Data de Nascimento</label>
+        <input type="date" class="form-control" name="birthDate" id="birthDate" value="@Model.BirthDateString" required>
     </div>
     <div class="col-md-2">
-        <label for="species" class="form-label">Especie</label>
+        <label for="species" class="form-label">Espécie</label>
         <input type="text" class="form-control" name="species" id="species" value="@Model.Species" required>
     </div>
     <div class="col-md-4">
