--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,13 +32,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Hospital" asp-action="Index">Hospitais</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Patient" asp-action="Index">Paciente</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Doctor" asp-action="Index">Médicos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Tutor" asp-action="Index">Tutor</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Doctor" asp-action="Index">Doutor</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Patient" asp-action="Index">Paciente</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Anamnesis" asp-action="Index">Anamnese</a>
