--- a/Views/Tutor/Index.cshtml
+++ b/Views/Tutor/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
-<a href="/Tutor/Create" class="btn btn-outline-dark mb-3">
+<a href="/Tutor/Create" class="btn btn-success mb-3">
     Cadastrar tutor
 </a>
 
@@ -22,8 +22,8 @@ else
                 <th scope="col">ID</th>
                 <th scope="col">Nome</th>
                 <th scope="col">CPF</th>
-                <th scope="col">EndereçoId</th>
                 <th scope="col">Telefone</th>
+                <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
@@ -35,7 +35,6 @@ else
                     <th scope="row">@tutor.Id</th>
                     <td>@tutor.Name</td>
                     <td>@tutor.Cpf</td>
-                    <td>@tutor.AddressId</td>
                     <td>@tutor.Telephone</td>
                     <td>
                         <a href="/Tutor/Show/@tutor.Id" class="btn btn-outline-dark">
@@ -43,12 +42,12 @@ else
                         </a>
                     </td>
                     <td>
-                        <a href="/Tutor/Update/@tutor.Id" class="btn btn-outline-dark">
+                        <a href="/Tutor/Update/@tutor.Id" class="btn btn-outline-primary">
                             Atualizar
                         </a>
                     </td>
                     <td>
-                        <a href="/Tutor/Delete/@tutor.Id" class="btn btn-outline-dark">
+                        <a href="/Tutor/Delete/@tutor.Id" class="btn btn-danger">
                             Remover
                         </a>
                     </td>
