--- a/Views/Address/Index.cshtml
+++ b/Views/Address/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
-<a href="/Address/Create" class="btn btn-outline-dark mb-3">
+<a href="/Address/Create" class="btn btn-success mb-3">
     Cadastrar endereço
 </a>
 
@@ -42,12 +42,12 @@ else
                     <td>@address.City</td>
                     <td>@address.State</td>
                     <td>
-                        <a href="/Address/Update/@address.Id" class="btn btn-outline-dark">
+                        <a href="/Address/Update/@address.Id" class="btn btn-outline-primary">
                             Atualizar
                         </a>
                     </td>
                     <td>
-                        <a href="/Address/Delete/@address.Id" class="btn btn-outline-dark">
+                        <a href="/Address/Delete/@address.Id" class="btn btn-danger">
                             Remover
                         </a>
                     </td>
