--- a/Views/Doctor/Create.cshtml
+++ b/Views/Doctor/Create.cshtml
@@ -1,9 +1,9 @@
 @{
-    ViewData["Title"] = "Cadastrar doutor";
+    ViewData["Title"] = "Cadastrar médico";
 }
 
 <h1 class="mb-3">@ViewData["Title"]</h1>
-<p class="mb-4">Utilize o formulário abaixo para cadastrar o doutor.</p>
+<p class="mb-4">Utilize o formulário abaixo para cadastrar o médico.</p>
 
 <form action="/Doctor/Add" method="post" class="row g-3">
     <div class="col-md-2">
@@ -11,7 +11,7 @@
         <input type="text" class="form-control" name="id" id="id" required>
     </div>
     <div class="col-md-10">
-        <label for="name" class="form-label">Nome do doutor</label>
+        <label for="name" class="form-label">Nome do médico</label>
         <input type="text" class="form-control" name="name" id="name" required>
     </div>
     <div class="col-md-5">
