--- a/Views/Doctor/Show.cshtml
+++ b/Views/Doctor/Show.cshtml
@@ -1,24 +1,27 @@
 @model VetManager.Models.Doctor
 
 @{
-    ViewData["Title"] = $"Doctor {Model.Name}";
+    ViewData["Title"] = $"Médico {Model.Name}";
    var address = ViewData["Address"] as Address;
 }
+
+<a href="/Doctor/Index" class="btn btn-light">< Voltar</a>
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
 <p><strong>ID:</strong> @Model.Id</p>
-<p><strong>Nome do doutor:</strong> @Model.Name</p>
+<p><strong>Nome do médico:</strong> @Model.Name</p>
 <p><strong>Especialidade:</strong> @Model.Speciality</p>
 <p><strong>CPF:</strong> @Model.Cpf</p>
-<p><strong>Endereço:</strong> @address.Street, @address.Number - @address.District, @address.City - @address.ZipCode.</p>
 <p><strong>Telefone:</strong> @Model.Telephone</p>
+<p><strong>Endereço:</strong> @address.Street, @address.Number - @address.District, @address.City - @address.ZipCode.</p>
+<p><strong>ID do endereço: </strong> @Model.AddressId</p>
 
-<a href="/Doctor/Update/@Model.Id" class="btn btn-outline-dark mt-2">
+<a href="/Doctor/Update/@Model.Id" class="btn btn-outline-primary mt-2">
     Atualizar
 </a>
 
-<a href="/Doctor/Delete/@Model.Id" class="btn btn-outline-dark ms-3 mt-2">
+<a href="/Doctor/Delete/@Model.Id" class="btn btn-danger ms-3 mt-2">
     Remover
 </a>
 
