--- a/Views/Hospital/Index.cshtml
+++ b/Views/Hospital/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
-<a href="/Hospital/Create" class="btn btn-outline-dark mb-3">
+<a href="/Hospital/Create" class="btn btn-success mb-3">
     Cadastrar unidade
 </a>
 
@@ -42,12 +42,12 @@ else
                         </a>
                     </td>
                     <td>
-                        <a href="/Hospital/Update/@hospital.Id" class="btn btn-outline-dark">
+                        <a href="/Hospital/Update/@hospital.Id" class="btn btn-outline-primary">
                             Atualizar
                         </a>
                     </td>
                     <td>
-                        <a href="/Hospital/Delete/@hospital.Id" class="btn btn-outline-dark">
+                        <a href="/Hospital/Delete/@hospital.Id" class="btn btn-danger">
                             Remover
                         </a>
                     </td>
