--- a/Views/Hospital/Show.cshtml
+++ b/Views/Hospital/Show.cshtml
@@ -5,18 +5,21 @@
    var address = ViewData["Address"] as Address;
 }
 
+<a href="/Hospital/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
 <p><strong>ID:</strong> @Model.Id</p>
 <p><strong>Nome da unidade:</strong> @Model.Name</p>
 <p><strong>Telefones:</strong> @Model.Telephone1, @Model.Telephone2</p>
 <p><strong>Endereço:</strong> @address.Street, @address.Number - @address.District, @address.City - @address.ZipCode.</p>
+<p><strong>ID do endereço:</strong> @Model.AddressId</p>
 
-<a href="/Hospital/Update/@Model.Id" class="btn btn-outline-dark mt-2">
+<a href="/Hospital/Update/@Model.Id" class="btn btn-outline-primary mt-2">
     Atualizar
 </a>
 
-<a href="/Hospital/Delete/@Model.Id" class="btn btn-outline-dark ms-3 mt-2">
+<a href="/Hospital/Delete/@Model.Id" class="btn btn-danger ms-3 mt-2">
     Remover
 </a>
 
