--- a/Views/Patient/Create.cshtml
+++ b/Views/Patient/Create.cshtml
@@ -15,8 +15,8 @@
         <input type="text" class="form-control" name="name" id="name" required>
     </div>
     <div class="col-md-5">
-        <label for="age" class="form-label">Idade</label>
-        <input type="text" class="form-control" name="age" id="age" required>
+        <label for="birthDate" class="form-label">Data de Nascimento</label>
+        <input type="date" class="form-control" name="birthDate" id="birthDate" required>
     </div>
     <div class="col-md-5">
         <label for="species" class="form-label">Espécie</label>
