--- a/Views/Patient/Index.cshtml
+++ b/Views/Patient/Index.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="mb-4">@ViewData["Title"]</h1>
 
-<a href="/Patient/Create" class="btn btn-outline-dark mb-3">
+<a href="/Patient/Create" class="btn btn-success mb-3">
     Cadastrar paciente
 </a>
 
@@ -23,8 +23,8 @@ else
                 <th scope="col">Nome</th>
                 <th scope="col">Idade</th>
                 <th scope="col">Espécie</th>
-                <th scope="col">TipoSanguineo</th>
-                <th scope="col">TutorId</th>
+                <th scope="col">Tipo Sanguineo</th>
+                <th scope="col"></th>
                 <th scope="col"></th>
                 <th scope="col"></th>
             </tr>
@@ -35,22 +35,21 @@ else
                 <tr>
                     <th scope="row">@patient.Id</th>
                     <td>@patient.Name</td>
-                    <td>@patient.Age</td>
+                    <td>@patient.GetAge()</td>
                     <td>@patient.Species</td>
                     <td>@patient.BloodType</td>
-                    <td>@patient.TutorId</td>
                     <td>
                         <a href="/Patient/Show/@patient.Id" class="btn btn-outline-dark">
                             Detalhes
                         </a>
                     </td>
                     <td>
-                        <a href="/Patient/Update/@patient.Id" class="btn btn-outline-dark">
+                        <a href="/Patient/Update/@patient.Id" class="btn btn-outline-primary">
                             Atualizar
                         </a>
                     </td>
                     <td>
-                        <a href="/Patient/Delete/@patient.Id" class="btn btn-outline-dark">
+                        <a href="/Patient/Delete/@patient.Id" class="btn btn-danger">
                             Remover
                         </a>
                     </td>
