improving validations and adding procedures adding and showing functionalities

--- a/Views/Address/Index.cshtml
+++ b/Views/Address/Index.cshtml
@@ -35,7 +35,7 @@ else
             {
                 <tr>
                     <th scope="row">@address.Id</th>
-                    <td>@address.ZipCode</td>
+                    <td>@address.FormattedZipCode</td>
                     <td>@address.Street</td>
                     <td>@address.Number</td>
                     <td>@address.District</td>
