--- a/Views/Doctor/Index.cshtml
+++ b/Views/Doctor/Index.cshtml
@@ -36,7 +36,7 @@ else
                     <th scope="row">@doctor.Id</th>
                     <td>@doctor.Name</td>
                     <td>@doctor.Speciality</td>
-                    <td>@doctor.Cpf</td>
+                    <td>@doctor.FormattedCpf</td>
                     <td>@doctor.Telephone</td>
                     <td>
                         <a href="/Doctor/Show/@doctor.Id" class="btn btn-outline-dark">
