--- a/Views/Hospital/Create.cshtml
+++ b/Views/Hospital/Create.cshtml
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-5">
         <label for="telephone2" class="form-label">Telefone 2</label>
-        <input type="text" class="form-control" name="telephone2" id="telephone2" required>
+        <input type="text" class="form-control" name="telephone2" id="telephone2">
     </div>
     <div class="col-md-2">
         <label for="addressId" class="form-label">ID do endereço</label>
