--- a/Views/Patient/Create.cshtml
+++ b/Views/Patient/Create.cshtml
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-2">
         <label for="bloodType" class="form-label">Tipo sanguíneo</label>
-        <input type="text" class="form-control" name="bloodType" id="bloodType" required>
+        <input type="text" class="form-control" name="bloodType" id="bloodType">
     </div>
     <div class="col-md-2">
         <label for="tutorId" class="form-label">ID tutor</label>
