--- a/Views/Patient/Update.cshtml
+++ b/Views/Patient/Update.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="col-md-4">
         <label for="bloodType" class="form-label">Tipo sanguíneo</label>
-        <input type="text" class="form-control" name="bloodType" id="bloodType" value="@Model.BloodType" required>
+        <input type="text" class="form-control" name="bloodType" id="bloodType" value="@Model.BloodType">
     </div>
     <div class="col-md-4">
         <label for="tutorId" class="form-label">Tutor Id</label>
