--- a/Views/Tutor/Index.cshtml
+++ b/Views/Tutor/Index.cshtml
@@ -34,7 +34,7 @@ else
                 <tr>
                     <th scope="row">@tutor.Id</th>
                     <td>@tutor.Name</td>
-                    <td>@tutor.Cpf</td>
+                    <td>@tutor.FormattedCpf</td>
                     <td>@tutor.Telephone</td>
                     <td>
                         <a href="/Tutor/Show/@tutor.Id" class="btn btn-outline-dark">
