--- a/Views/Hospital/Update.cshtml
+++ b/Views/Hospital/Update.cshtml
@@ -23,7 +23,7 @@
     <div class="col-md-5">
         <label for="telephone2" class="form-label">Telefone 2</label>
         <input type="text" class="form-control" name="telephone2" id="telephone2"
-        value="@Model.Telephone2" required>
+        value="@Model.Telephone2">
     </div>
     <div class="col-md-2">
         <label for="addressId" class="form-label">ID do endereço</label>
