--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Anamnesis" asp-action="Index">Anamnese</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Procedure" asp-action="Index">Procedimentos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
