adding procedure create functionality

--- a/Views/Hospital/Create.cshtml
+++ b/Views/Hospital/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar hospital";
 }
 
+<a href="/Hospital/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar uma nova unidade.</p>
 
