--- a/Views/Address/Create.cshtml
+++ b/Views/Address/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar endereço";
 }
 
+<a href="/Address/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar um novo endereço.</p>
 
