--- a/Views/Anamnesis/Create.cshtml
+++ b/Views/Anamnesis/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar anamnese";
 }
 
+<a href="/Anamnesis/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar a anamnese.</p>
 
