--- a/Views/Doctor/Create.cshtml
+++ b/Views/Doctor/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar médico";
 }
 
+<a href="/Doctor/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar o médico.</p>
 
