--- a/Views/Patient/Create.cshtml
+++ b/Views/Patient/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar paciente";
 }
 
+<a href="/Patient/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar um novo paciente.</p>
 
