--- a/Views/Tutor/Create.cshtml
+++ b/Views/Tutor/Create.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Cadastrar tutor";
 }
 
+<a href="/Tutor/Index" class="btn btn-light">< Voltar</a>
+
 <h1 class="mb-3">@ViewData["Title"]</h1>
 <p class="mb-4">Utilize o formulário abaixo para cadastrar o tutor de um paciente.</p>
 
